force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EndDate__c</fullName>
    <description>The obligation end date.</description>
    <inlineHelpText>The obligation end date. Maximum of all related Agreement Line Item contract end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>