force-app/main/default/objects/Apttus__Obligation__c/fields/Apttus__ObligationName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ObligationName__c</fullName>
    <description>Brief description of the obligation.</description>
    <inlineHelpText>A user friendly name for the obligation</inlineHelpText>
    <label>Obligation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>